# geode-cli-installer-rs

./: Cargo.toml  README.md  download_and_run.sh
src/: errors.rs  main.rs
src/utils/: geode_installer.rs  steam_game_finder.rs
